# typra

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  rust-toolchain.toml
.github/: dependabot.yml
crates/typra/: Cargo.toml  README.md
crates/typra-cli/: Cargo.toml
crates/typra-cli/src/: main.rs
crates/typra-cli/tests/: cli_smoke.rs
crates/typra-core/: Cargo.toml  README.md
crates/typra-core/benches/: query.rs  workflows.rs
crates/typra-core/src/: checkpoint.rs  checksum.rs  config.rs  db.rs  error.rs  file_format.rs  index.rs  lib.rs  manifest.rs  migration.rs  pager.rs  publish.rs  schema.rs  spill.rs  storage.rs  superblock.rs  txn.rs  validation.rs
crates/typra-core/src/catalog/: codec.rs  mod.rs  state.rs
crates/typra-core/src/db/: fs_ops.rs  helpers.rs  mod.rs  open.rs  recover.rs  replay.rs  write.rs
crates/typra-core/src/query/: agg.rs  ast.rs  join.rs  mod.rs  operators.rs  planner.rs
crates/typra-core/src/record/: mod.rs  payload_v1.rs  payload_v2.rs  payload_v3.rs  row_value.rs  scalar.rs
crates/typra-core/src/segments/: header.rs  mod.rs  reader.rs  writer.rs
crates/typra-core/src/sql/: mod.rs
crates/typra-core/tests/: api_stability_smoke.rs  branch_small_modules.rs  catalog_codec_constraints.rs  catalog_codec_hardening.rs  catalog_codec_indexes_more.rs  catalog_lookup.rs  catalog_registration.rs  checkpoint_more.rs  compaction.rs  coverage_core_more.rs  coverage_db_api_more.rs  coverage_db_core_more.rs  coverage_line_final.rs  coverage_more.rs  database_registration_edges.rs  db_insert_errors.rs  db_multiseg_insert_edges.rs  db_open.rs  db_open_upgrade_and_checkpoint.rs  db_replay_branches.rs  derive_generics.rs  derive_smoke.rs  e2e_inventory_workflow.rs  e2e_production_journey.rs  error_display.rs  file_format.rs  file_format_coverage.rs  file_header.rs  file_locking.rs  file_locking_crash_release.rs  format_upgrade.rs  manifest_corruption.rs  manifest_corruption_fallback.rs  manifest_decode_errors.rs  multi_collection_isolation.rs  open_v5_hits_legacy_replay.rs  pager_integration_coverage.rs  property_invariants.rs  publish_error_paths.rs  query_order_by.rs  (+29 more)
crates/typra-core/tests/integration/: api_stability_smoke.rs  catalog_codec_hardening.rs  catalog_codec_indexes_more.rs  catalog_codec_more.rs  catalog_lookup.rs  catalog_registration.rs  checkpoint_more.rs  composite_database.rs  coverage_core_more.rs  coverage_db_api_more.rs  coverage_low_level.rs  coverage_more.rs  database_paths.rs  database_registration_edges.rs  db_insert_errors.rs  db_multiseg_insert_edges.rs  db_snapshot_ops.rs  error_more.rs  file_format.rs  file_header.rs  file_locking.rs  file_locking_crash_release.rs  index_codec_and_state.rs  manifest_roundtrip.rs  nasty_bytes.rs  open_truncated_file_branch.rs  property_invariants.rs  publish_helper_branches.rs  query_planner_coverage.rs  record_payload_v1_v2_delete_edges.rs  record_roundtrip.rs  recovery_fallback_scan.rs  row_subset_edges.rs  row_value_codec_errors.rs  scan_edge_cases.rs  schema_paths_multi_segment.rs  segments_corruption.rs  segments_reader_error_paths.rs  snapshot_hardening.rs  spillable_aggregation.rs  (+7 more)
crates/typra-core/tests/unit/: src_catalog_codec_tests.rs  src_catalog_state_tests.rs  src_checkpoint_tests.rs  src_db_mod_scalar_at_path_tests.rs  src_db_mod_tests.rs  src_db_open_tests.rs  src_db_recover_tests.rs  src_db_replay_tests.rs  src_db_write_tests.rs  src_pager_tests.rs  src_query_agg_tests.rs  src_query_join_tests.rs  src_query_operators_tests.rs  src_query_planner_tests.rs  src_record_payload_v2_tests.rs  src_record_payload_v3_tests.rs  src_record_scalar_tests.rs  src_schema_tests.rs  src_spill_tests.rs  src_storage_tests.rs
crates/typra-derive/: Cargo.toml  README.md
crates/typra-derive/src/: lib.rs
crates/typra-python/: Cargo.toml
crates/typra/examples/: open.rs
crates/typra/src/: async_api.rs  lib.rs
crates/typra/tests/: async_api.rs  derive_generics.rs  derive_smoke.rs  facade_smoke.rs
docs/: 01_full_architecture_spec.md  02_on_disk_file_format.md  03_rust_crate_and_module_layout.md  04_schema_dsl_spec.md  05_query_planner_and_execution_spec.md  06_record_encoding_v1.md  07_record_encoding_v2.md  compatibility_matrix.md  contributing.md  glossary.md  guide_concepts.md  guide_getting_started.md  guide_models_and_collections.md  guide_operations_and_failure_modes.md  guide_python.md  guide_storage_modes.md  index.md  map.md  migration_0.4_to_0.5.md  migration_0.5_to_0.6.md  migration_0.6_to_0.7.md  migration_0.7_to_0.8.md  requirements.txt  security_threat_model.md  typed_embedded_db_spec.md  types_matrix.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_catalog_payload.rs  decode_file_header.rs  decode_index_payload.rs  decode_record_payload_v2.rs  decode_segment_header.rs  decode_superblock.rs  parse_sql_select.rs  scan_segments_vecstore.rs
python/: README.md  typra.pyi
python/typra/: Cargo.toml  README.md  pyproject.toml  typra.pyi
python/typra/src/: database.rs  dbapi.rs  errors.rs  fields_json.rs  inner_db.rs  lib.rs  models.rs  query.rs  row_values.rs
python/typra/tests/: test_database_behavior.py  test_dbapi_edge_cases.py  test_dbapi_sql.py  test_e2e_inventory_workflow.py  test_e2e_production_journey.py  test_error_mapping.py  test_fields_json.py  test_indexes_and_queries.py  test_insert_get.py  test_migrations_and_compaction.py  test_models.py  test_multi_segment_schema_paths.py  test_primitives_roundtrip.py  test_query_builder.py  test_realistic_workflows.py  test_snapshots.py  test_typra.py  test_validation_and_composites.py
scripts/: bench_compare.py  docs-lint.sh  (+11 more)
starter_repo_scaffold/: Cargo.toml  README.md
starter_repo_scaffold/crates/typra-core/src/: config.rs  db.rs  lib.rs  validation.rs
starter_repo_scaffold/crates/typra-derive/: Cargo.toml
starter_repo_scaffold/crates/typra-derive/src/: lib.rs
starter_repo_scaffold/crates/typra-python/: README.md  build.rs  pyproject.toml
starter_repo_scaffold/crates/typra-python/src/: lib.rs
(+30 files in other folders)
