[workspace]
members = [
    "crates/typra-core",
    "crates/typra-derive",
    "crates/typra",
    "python/typra",
]
resolver = "2"

[workspace.dependencies]
typra = { path = "crates/typra", version = "0.5.1" }
typra-core = { path = "crates/typra-core", version = "0.5.1" }
typra-derive = { path = "crates/typra-derive", version = "0.5.1" }

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/eddiethedean/typra"

[workspace.lints.rust]
unsafe_code = "forbid"
