[workspace]
members = [
    "crates/typra-core",
    "crates/typra-derive",
    "crates/typra",
    "crates/typra-cli",
    "python/typra",
    "fuzz",
]
resolver = "2"

[workspace.dependencies]
typra = { path = "crates/typra", version = "0.13.0" }
typra-core = { path = "crates/typra-core", version = "0.13.0" }
typra-derive = { path = "crates/typra-derive", version = "0.13.0" }

[workspace.package]
version = "0.13.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/eddiethedean/typra"

[workspace.lints.rust]
unsafe_code = "forbid"
