[workspace]
members = [
    "crates/typra-core",
    "crates/typra-derive",
    "crates/typra-python",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
# Optional: set on [workspace.package] before publishing (silences crates.io metadata warnings):
# repository = "https://github.com/your-org/typra"
