[package]
name = "typra-cli"
description = "Operational CLI for Typra databases."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typra"
path = "src/main.rs"

[dependencies]
typra-core.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true

