[package]
name = "typra-core"
description = "Core engine for Typra, a typed embedded database."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
crc32c = "0.6"
regex = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
proptest = "1"

[[bench]]
name = "query"
harness = false

[lints]
workspace = true
