[package]
name = "typra-derive"
description = "Proc-macro derives for Typra database models."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
typra-core.workspace = true

[lints]
workspace = true
