[package]
name = "typra"
description = "Typed embedded database for application data — user-facing facade over typra-core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
typra-core.workspace = true
typra-derive = { workspace = true, optional = true }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["derive"]
derive = ["dep:typra-derive"]
async = ["dep:tokio"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
