[package]
name = "typra-python"
description = "Python bindings (PyO3) for Typra, a typed embedded database."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "pyproject.toml",
    "build.rs",
    "src/**/*",
]

[lib]
name = "typra"
crate-type = ["cdylib"]

[dependencies]
# abi3-py39: one wheel per platform compatible with CPython 3.9+ (PEP 384 limited API).
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
